--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script: bash .scripts/deploy.sh
 
 env:
   global:
-  - ENCRYPTION_LABEL: "ENCRYPTION_LABEL"
+  - ENCRYPTION_LABEL: "3c80066119de"
   - COMMIT_AUTHOR_EMAIL: "djodjo@djodjo.org"
